--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -42,7 +42,7 @@ input[type="password"] {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #05b4ff; /* Button color */
+    background-color: #05b4ff; 
     color: white;
     border: none;
     border-radius: 4px;
