--- a/templates/admin-Config/admin-edit-project.html
+++ b/templates/admin-Config/admin-edit-project.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Admin | Edit-Projects</title>
     <style>
         body {
@@ -65,14 +66,36 @@
         .form-group input[type="file"] {
             padding: 3px;
         }
+        .back-link {
+            display: inline-flex;
+            align-items: center;
+            padding: 10px 15px;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            font-size: 16px;
+            margin-bottom: 20px;
+          }
+    
+          .back-link i {
+            margin-right: 8px;
+          }
+    
+          .back-link:hover {
+            background-color: #0056b3;
+          }
     </style>
 </head>
 <body>
-    <h1>Edit Project</h1>
+    <div>
     <form method="post" enctype="multipart/form-data">
+        <a href="{%url 'list-project'%}" class="back-link"><i class='bx bx-arrow-back'></i> Back</a>
+    <h1>Edit Project</h1>
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Save Changes</button>
     </form>
+    </div>
 </body>
 </html>
